Скачивание данных со страницы

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -178,6 +178,9 @@
                     {% endif %}
                 </div>
             </div>
+            <a href="{% url 'accounts:download_data' %}" class="profile-download">
+                <span>Скачать мои данные</span>
+            </a>
 
             <div class="divider"></div>
                     <a class="profile-logout" href="#" onclick="logout(); return false;">
